Localize Formation Panel